<resources>
    <string name="app_name">Yahtzee</string>
    <string name="game_name">ZEN YAHTZEE</string>
    <string name="start_new_game">Start New Game</string>
    <string name="resume_game">Resume Game</string>Resume Game
    <string name="exit">Exit</string>
    <string name="roll">Roll</string>
    <string name="game_over">Game Over!</string>
    <string name="total_points_info">"Your total score"</string>
    <string name="rolls_info">"Rolls left %1$s"</string>
    <string name="points_sheet">Points</string>
    <string name="new_game">New Game</string>
    <string name="button_new_round">Next</string>
    <string name="column_rolls">ROLLS</string>
    <string name="column_points">POINTS</string>
    <string name="button_accept">Accept</string>
    <string name="button_back">Back</string>
    <string name="dice_1">Dice 1</string>
    <string name="ones">Ones</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="upper_total">Upper Total</string>
    <string name="bonus">Bonus</string>
    <string name="same_of_three">Same of Three</string>
    <string name="same_of_four">Same of Four</string>
    <string name="full_house">Full House</string>
    <string name="small_straight">Small Straight</string>
    <string name="big_straight">Big Straight</string>
    <string name="chance">Chance</string>
    <string name="yahtzee">YAHTZEE</string>
    <string name="total">TOTAL</string>
</resources>