...
                    height = buttonHeight,
                    width = buttonWidth,
                    pad = 20,
                    enable = enableAccept,
                    onButtonClicked = onAcceptButtonClicked,
                    buttonText = stringResource(id = R.string.button_accept),
                    test_tag = "accept_button"
                )
                // Back-button
                ButtonDisableable(
                    height = buttonHeight,
                    width = buttonWidth,
                    pad = 20,
                    onButtonClicked = {
                        onNavButtonClicked("dices")
                    },
                    buttonText = stringResource(id = R.string.button_back),
                    test_tag = "back_button"
                )
            }
        }
    }
}

...
